Revert "fix: add content-visibility: auto on footer to prevent scroll to top on load caused by iframe"
This reverts commit 9eca717b222a6def8e1b067fb013f3367a9a8fc7.

--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,6 @@ section > h2 {
 } 
 
 .contacto {
-  content-visibility: auto;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
